--- a/public/map.html
+++ b/public/map.html
@@ -37,6 +37,7 @@
                     level: 3
                 };
                 const map = new kakao.maps.Map(mapContainer, mapOption);
+                window.map = map;
 
                 // 마커
                 new kakao.maps.Marker({
@@ -46,6 +47,35 @@
             } else {
                 console.error('kakao.maps is not available');
             }
+
+            window.places = new kakao.maps.services.Places(window.map);
+
+            function handleMessage(e) {
+                let msg;
+                try { msg = JSON.parse(e.data); }
+                catch { return; }
+                if (msg.keyword) {
+                    console.log('[map.html] searchPlaces called:', msg.keyword);
+                    searchPlaces(msg.keyword);
+                }
+            }
+
+            window.addEventListener('message', handleMessage);
+            document.addEventListener('message', handleMessage);
+
+            window.searchPlaces = function (keyword) {
+                if (!keyword) return;
+                places.keywordSearch(keyword, function (data, status) {
+                    if (status == kakao.maps.services.Status.OK) {
+                        const location = new kakao.maps.LatLng(data[0].y, data[0].x);
+                        map.setCenter(location);
+                        map.SetLevel(4);
+                    } else {
+                        alert('검색 결과가 없습니다.');
+                    }
+                });
+            }
+
         });
     </script>
 </body>
