검색 마커 기능, BottomSheet 표시 기능 추가

--- a/public/map.html
+++ b/public/map.html
@@ -4,10 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- autoload=false 넣은 상태에서 kakao.maps.load 콜백 사용 -->
     <script
-        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=d73e9b362b7e9d719a4bf602da77dcb4&libraries=services&autoload=false">
-        </script>
+        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=d73e9b362b7e9d719a4bf602da77dcb4&libraries=services&autoload=false"></script>
     <style>
         html,
         body,
@@ -22,60 +20,83 @@
 
 <body>
     <div id="map"></div>
-
     <script>
         kakao.maps.load(function () {
-            console.log('Kakao Maps SDK is loaded');
+            const mapContainer = document.getElementById('map');
+            const mapOption = { center: new kakao.maps.LatLng(37.55893664, 126.9987376), level: 3 };
+            const map = new kakao.maps.Map(mapContainer, mapOption);
+            const places = new kakao.maps.services.Places(map);
+            window.markers = [];
 
-            // kakao 전역이 연결되었는지 체크
-            if (typeof kakao !== 'undefined' && kakao.maps) {
-                console.log('kakao.maps is available');
-
-                const mapContainer = document.getElementById('map');
-                const mapOption = {
-                    center: new kakao.maps.LatLng(37.55893664, 126.9987376),
-                    level: 3
-                };
-                const map = new kakao.maps.Map(mapContainer, mapOption);
-                window.map = map;
-
-                // 마커
-                new kakao.maps.Marker({
-                    position: new kakao.maps.LatLng(37.55893664, 126.9987376),
-                    map: map
-                });
-            } else {
-                console.error('kakao.maps is not available');
+            function clearMarkers() {
+                window.markers.forEach(m => m.setMap(null));
+                window.markers = [];
             }
-
-            window.places = new kakao.maps.services.Places(window.map);
-
-            function handleMessage(e) {
-                let msg;
-                try { msg = JSON.parse(e.data); }
-                catch { return; }
-                if (msg.keyword) {
-                    console.log('[map.html] searchPlaces called:', msg.keyword);
-                    searchPlaces(msg.keyword);
-                }
-            }
-
-            window.addEventListener('message', handleMessage);
-            document.addEventListener('message', handleMessage);
 
             window.searchPlaces = function (keyword) {
                 if (!keyword) return;
-                places.keywordSearch(keyword, function (data, status) {
-                    if (status == kakao.maps.services.Status.OK) {
-                        const location = new kakao.maps.LatLng(data[0].y, data[0].x);
-                        map.setCenter(location);
-                        map.SetLevel(4);
-                    } else {
-                        alert('검색 결과가 없습니다.');
-                    }
-                });
-            }
+                const center = map.getCenter();
+                clearMarkers();
 
+                // 1) 반경 검색
+                places.keywordSearch(keyword, function (data, status) {
+                    if (status === kakao.maps.services.Status.OK && data.length) {
+                        const names = [];
+                        data.forEach(p => {
+                            const loc = new kakao.maps.LatLng(p.y, p.x);
+                            const marker = new kakao.maps.Marker({ position: loc, map });
+                            window.markers.push(marker);
+                            names.push(p.place_name);
+                        });
+                        map.setCenter(center);
+
+                        // ✨ RN으로 이름 리스트 전달
+                        window.ReactNativeWebView.postMessage(
+                            JSON.stringify({ type: 'PLACES_LIST', places: names })
+                        );
+                    } else {
+                        // 2) 반경 결과 없으면 전역 검색 폴백
+                        places.keywordSearch(keyword, function (allData, allStatus) {
+                            if (allStatus === kakao.maps.services.Status.OK && allData.length) {
+                                clearMarkers();
+                                const first = allData[0];
+                                const newCenter = new kakao.maps.LatLng(first.y, first.x);
+                                map.setCenter(newCenter);
+                                map.setLevel(4);
+
+                                const names = [];
+                                allData.forEach(p => {
+                                    const loc = new kakao.maps.LatLng(p.y, p.x);
+                                    const marker = new kakao.maps.Marker({ position: loc, map });
+                                    window.markers.push(marker);
+                                    names.push(p.place_name);
+                                });
+
+                                window.ReactNativeWebView.postMessage(
+                                    JSON.stringify({ type: 'PLACES_LIST', places: names })
+                                );
+                            } else {
+                                alert('검색 결과가 없습니다. (status=' + status + ')');
+                                window.ReactNativeWebView.postMessage(
+                                    JSON.stringify({ type: 'PLACES_LIST', places: [] })
+                                );
+                            }
+                        });
+                    }
+                }, {
+                    location: center,
+                    radius: 1000
+                });
+            };
+
+            function handleMessage(e) {
+                try {
+                    const msg = JSON.parse(e.data);
+                    if (msg.keyword) window.searchPlaces(msg.keyword);
+                } catch { }
+            }
+            window.addEventListener('message', handleMessage);
+            document.addEventListener('message', handleMessage);
         });
     </script>
 </body>
